TL-26289 media: Prevent mediaplayer taking up too much space

--- a/server/filter/mediaplugin/styles.css
+++ b/server/filter/mediaplugin/styles.css
@@ -15,5 +15,5 @@
 }
 
 .mediaplugin > div {
-    margin: auto;
+    margin: inherit;
 }
